# sample-todo-list-hexagonal-achitecture

./: .gitignore  README.md  SampleTODOList.drawio  example.env  pyproject.toml  todo.py
app/: __init__.py  configuration.py  console.py  providers.py
resources/: sample-todo-list.drawio
tests/: conftest.py
tests/integration/: test_infrastructure_persistence.py
tests/unit/: test_application_services.py
to_do_list/shared/domain/: models.py
to_do_list/tasks/application/: services.py  sources.py
to_do_list/tasks/domain/: contracts.py  exceptions.py  models.py  services.py
to_do_list/tasks/infrastructure/persistence/: relational.py
